--- a/hsccinfo/views/index.ejs
+++ b/hsccinfo/views/index.ejs
@@ -5,7 +5,16 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Welcome to bdpa 2025</h1>
+    <h2>my name is colin </h2>
+    <p>this page will be an intro to the HSCC program </p>
+    <h2> hyperlinks </h2>
+    <ul>
+<li>bdpa national <a href="http://www.bdpa.org">link</a> </li>
+<li>bdpa millwaukee <a href="http://www.bdpa.org">link</a> </li>
+<li>w3schools <a href="http://www.w3schools.com">link</a> </li>
+
+
+    </ul>
   </body>
 </html>
