--- a/hsccinfo/views/bdpahistory.ejs
+++ b/hsccinfo/views/bdpahistory.ejs
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>Welcome to bdpa 2025</h1>
+    <h1>bdpahistory</h1>
     <h2>my name is colin </h2>
     <p>this page will be an intro to the HSCC program </p>
     <h2> hyperlinks </h2>
