updated bdpa history

--- a/hsccinfo/views/bdpahistory.ejs
+++ b/hsccinfo/views/bdpahistory.ejs
@@ -9,7 +9,13 @@
     <h2>my name is colin </h2>
     <p>this page will be an intro to the HSCC program </p>
     <h2> hyperlinks </h2>
-    <ul>
+      <li>Fuonders of BDPA Founded by Earl Pace and the late David Wimberl </li>
+      <li>Founding year of bdpa</li>
+      <LI>First chapters</LI>
+      <li>First BDPA confrennce </li>\
+      <li>Most recent venue and winner of hscc</li>
+      <li>current national president and vp</li>
+      <li>current chapter president and vp</li>
 <li>bdpa national <a href="http://www.bdpa.org">link</a> </li>
 <li>bdpa millwaukee <a href="http://www.bdpa.org">link</a> </li>
 <li>w3schools <a href="http://www.w3schools.com">link</a> </li>
