--- a/hsccinfo/views/bdpahistory.ejs
+++ b/hsccinfo/views/bdpahistory.ejs
@@ -3,9 +3,30 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <style>
+      h2 {color:aliceblue}
+    </style>
   </head>
   <body>
+    This is our horizontal navbar
+<ul class="menu">
+<li><a href="/"><img src="images/bdpalogo.png">  </a></li>
+<li><a href="/">home</a></li>
+<li><a href="/bdpahistory">bdpahistory</a></li>
+<li><a href="#">sample Form </a></li>
+</ul>
+
+
+
+
+
+
+
+
+
     <h1>bdpahistory</h1>
+    <img src="images/bdpalogo.png" alt="BDPA logo">
+
     <h2>my name is colin </h2>
     <p>this page will be an intro to the HSCC program </p>
     <h2> hyperlinks </h2>
