--- a/hsccinfo/views/bdpahistory.ejs
+++ b/hsccinfo/views/bdpahistory.ejs
@@ -8,15 +8,15 @@
     </style>
   </head>
   <body>
-    This is our horizontal navbar
+ <!-- this is our horizontal navbar -->
 <ul class="menu">
 <li><a href="/"><img src="images/bdpalogo.png">  </a></li>
 <li><a href="/">home</a></li>
 <li><a href="/bdpahistory">bdpahistory</a></li>
 <li><a href="#">sample Form </a></li>
 </ul>
-
-
+<!-- end navbar -->
+<br><br><br>
 
 
 
