--- a/hsccinfo/views/partials/formentry.ejs
+++ b/hsccinfo/views/partials/formentry.ejs
@@ -6,6 +6,9 @@
     <!-- Include navigation menu -->
     <%- include('./partials/menu') -%>
 
+
+    <h1>sample data entry </h1>
+    <form name="sample"
 </body>
 </html>
 
