--- a/hsccinfo/views/bdpahistory.ejs
+++ b/hsccinfo/views/bdpahistory.ejs
@@ -13,7 +13,7 @@
 <li><a href="/"><img src="images/bdpalogo.png">  </a></li>
 <li><a href="/">home</a></li>
 <li><a href="/bdpahistory">bdpahistory</a></li>
-<li><a href="#">sample Form </a></li>
+<li><a href="/formentry">sample Form </a></li>
 </ul>
 <!-- end navbar -->
 <br><br><br>
