--- a/hsccinfo/public/stylesheets/style.css
+++ b/hsccinfo/public/stylesheets/style.css
@@ -1,16 +1,16 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: darkcyan;
+  background-color: rgb(84, 4, 4);
 }
 
 
 a {
-  color: #00ff2655;
+  color: rgba(0, 255, 38, 0.33);
 }
 
 h1 {color:crimson}
-color 
+
 
 
 .menu {
@@ -18,10 +18,8 @@ list-style-type: none;
 margin: 0;
 padding: 0;
 background-color: cadetblue;
-
+}
 
 .menu li{
 float:left;
-
 }
-.menu
